--- a/index.html
+++ b/index.html
@@ -22,10 +22,12 @@
 
     <!-- ------------------------------ Progress bar ------------------------------ -->
 
-    <div class="progressSection">
-        <div class="progressBarWrap"></div>
-        <div class="progressBar"></div>
-        <div class="progressNum"></div>
+    <div class="container">
+        <div class="progressSection">
+            <div class="progressBarWrap"></div>
+            <div class="progressBar"></div>
+            <div class="progressNum"></div>
+        </div>
     </div>
 
     <!-- ------------------------------ Strips ------------------------------ -->
@@ -68,30 +70,30 @@
         </div>
     </div>
 
-        <!-- ------------------------------ Hero section ------------------------------ -->
+    <!-- ------------------------------ Hero section ------------------------------ -->
 
-        <section id="section-a">
-            <div class="container">
-                <div class="heroText">
-                    <h2 class="upper-heading">
-                        Before <b>April '21</b><br>
-                        I knew nothing
-                    </h2>
-                    <h1 class="lower-heading">
-                        Today I<br>
-                        <strong>{ </strong>
-                        <span class="text"></span>
-                        <span class="cursor">_</span><strong> }</strong>
-                    </h1>
-                    <a href="#section-b"><button>Let me show you</button></a>
-                </div>
+    <section id="section-a">
+        <div class="container">
+            <div class="heroText">
+                <h2 class="upper-heading">
+                    Before <b>April '21</b><br>
+                    I knew nothing
+                </h2>
+                <h1 class="lower-heading">
+                    Today I<br>
+                    <strong>{ </strong>
+                    <span class="text"></span>
+                    <span class="cursor">_</span><strong> }</strong>
+                </h1>
+                <a href="#section-b"><button>Let me show you</button></a>
             </div>
-            <div>
+        </div>
+        <!-- <div>
                 <canvas class="canvas-1"></canvas>
-            </div>
-        </section>
+            </div> -->
+    </section>
 
-        
+
 
 </body>
 
