--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
                 <a href="#section-b"><button>Let me show you</button></a>
             </div>
         </div>
-        <!-- <div>
+        <div>
                 <canvas class="canvas-1"></canvas>
-            </div> -->
+            </div>
     </section>
 
 
