--- a/index.html
+++ b/index.html
@@ -16,10 +16,13 @@
 
     <!-- Fonts -->
     <link rel="stylesheet" href="https://use.typekit.net/esc0efc.css">
+
+    <!-- jQuery -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 </head>
 
 <body>
-
     <!-- ------------------------------ Progress bar ------------------------------ -->
 
     <div class="container">
@@ -89,8 +92,8 @@
             </div>
         </div>
         <div>
-                <canvas class="canvas-1"></canvas>
-            </div>
+            <canvas class="canvas-1"></canvas>
+        </div>
     </section>
 
 
