--- a/index.html
+++ b/index.html
@@ -96,7 +96,106 @@
         </div>
     </section>
 
+    <!-- ------------------------------ Portfolio section ------------------------------ -->
 
+    <section id="section-b">
+        <div class="container">
+            <div class="heading">
+                <h1>Portfolio <strong>—</strong></h2>
+                    <h2>current projects</h2>
+            </div>
+        </div>
+    </section>
+
+
+    <!-- ------------------------------ Skills section ------------------------------ -->
+
+    <section id="section-d">
+        <div class="container">
+            <div class="heading">
+                <h1>Skills <strong>—</strong></h2>
+                    <h2>technologies, languages and tools
+                        I am familiar with</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae asperiores est ipsam culpa
+                        inventore, possimus id a aliquam nisi neque. Fugiat dolorum libero eveniet velit tempora
+                        facilis
+                        non autem dicta reiciendis eaque ipsum assumenda fuga officiis fugit alias enim ipsa
+                        quisquam
+                        incidunt sequi, ducimus, excepturi error, atque rerum architecto! Minus nostrum libero a
+                        voluptate ipsum esse inventore, asperiores dolore, maxime maiores ex? Assumenda sapiente ex
+                        cum
+                        molestias expedita, ducimus totam odio, obcaecati odit veritatis commodi! Rerum amet a
+                        dolorum
+                        quasi!</p>
+            </div>
+        </div>
+        </div>
+    </section>
+
+    <!-- ------------------------------ About section ------------------------------ -->
+
+    <section id="section-e">
+        <div class="container">
+            <div class="heading">
+                <h1>About <strong>—</strong></h2>
+                    <h2>let me to introduce myself</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae asperiores est ipsam culpa
+                        inventore, possimus id a aliquam nisi neque. Fugiat dolorum libero eveniet velit tempora
+                        facilis
+                        non autem dicta reiciendis eaque ipsum assumenda fuga officiis fugit alias enim ipsa
+                        quisquam
+                        incidunt sequi, ducimus, excepturi error, atque rerum architecto! Minus nostrum libero a
+                        voluptate ipsum esse inventore, asperiores dolore, maxime maiores ex? Assumenda sapiente ex
+                        cum
+                        molestias expedita, ducimus totam odio, obcaecati odit veritatis commodi! Rerum amet a
+                        dolorum
+                        quasi!</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- ------------------------------ Contact section ------------------------------ -->
+
+    <section id="section-f">
+        <div class="container">
+            <div class="heading">
+                <h1>Contact <strong>—</strong></h2>
+                    <h2>let's colaborate</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae asperiores est ipsam culpa
+                        inventore, possimus id a aliquam nisi neque. Fugiat dolorum libero eveniet velit tempora
+                        facilis
+                        non autem dicta reiciendis eaque ipsum assumenda fuga officiis fugit alias enim ipsa
+                        quisquam
+                        incidunt sequi, ducimus, excepturi error, atque rerum architecto! Minus nostrum libero a
+                        voluptate ipsum esse inventore, asperiores dolore, maxime maiores ex? Assumenda sapiente ex
+                        cum
+                        molestias expedita, ducimus totam odio, obcaecati odit veritatis commodi! Rerum amet a
+                        dolorum
+                        quasi!</p>
+            </div>
+        </div>
+    </section>
+
+
+
+    <!-- ------------------------------ Scripts ------------------------------ -->
+
+    <!-- GSAP -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/EasePack.min.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/TextPlugin.min.js"></script>
+
+    <!-- Other scripts -->
+    <script src="/Scripts/progress_bar.js"></script>
+    <script src="/Scripts/menu.js"></script>
+    <script type="module" src="/Scripts/animated_text.js"></script>
+
+    <!-- Three.js -->
+    <!-- <script type="text" src="https://unpkg.com/browse/three@0.136.0/examples/jsm/loaders/GLTFLoader.js"></script>
+    <script type="text" src="https://unpkg.com/browse/three@0.136.0/examples/jsm/controls/OrbitControls.js"></script> -->
+
+    <!-- Main -->
+    <script type="module" src="/Scripts/main.js"></script>
 
 </body>
 
