--- a/index.html
+++ b/index.html
@@ -107,6 +107,26 @@
         </div>
     </section>
 
+    <!-- ------------------------------ Lab section ------------------------------ -->
+
+    <section id="section-c">
+        <div class="container">
+            <div class="heading">
+                <h1>Lab <strong>—</strong></h2>
+                    <h2>small projects, 3d models, minigames, archived stuff and more...</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae asperiores est ipsam culpa
+                        inventore, possimus id a aliquam nisi neque. Fugiat dolorum libero eveniet velit tempora
+                        facilis
+                        non autem dicta reiciendis eaque ipsum assumenda fuga officiis fugit alias enim ipsa
+                        quisquam
+                        incidunt sequi, ducimus, excepturi error, atque rerum architecto! Minus nostrum libero a
+                        voluptate ipsum esse inventore, asperiores dolore, maxime maiores ex? Assumenda sapiente ex
+                        cum
+                        molestias expedita, ducimus totam odio, obcaecati odit veritatis commodi! Rerum amet a
+                        dolorum
+                        quasi!</p>
+            </div>
+    </section>
 
     <!-- ------------------------------ Skills section ------------------------------ -->
 
@@ -128,7 +148,6 @@
                         dolorum
                         quasi!</p>
             </div>
-        </div>
         </div>
     </section>
 
